<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".CurrencyExchangeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="-15dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_rectangle_shape"
            android:backgroundTint="#4DB7EDD6"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:paddingTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/date_title" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/date_title"
                android:text="2024-10-28"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMainCurrencyExchange"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imBtnSwap"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/btnSourceCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:height="60dp"
                android:background="@drawable/rounded_rectangle_shape"
                android:gravity="end|top"
                android:hint="@string/amount_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:labelFor="@+id/editText_amount"
                android:padding="8dp"
                android:scrollbars="horizontal"
                android:textSize="24sp"
                app:boxBackgroundMode="none" />

            <Button
                android:id="@+id/btnTargetCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_rectangle_shape"
                android:gravity="end|top"
                android:padding="8dp"
                android:scrollbars="vertical"
                android:text="@string/result_hint"
                android:textSize="24sp" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imBtnSwap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/transparent"
            android:scaleType="center"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:tint="?attr/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/layoutMainCurrencyExchange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:srcCompat="@drawable/baseline_swap_vertical_circle_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnShowCurrency"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeStepGranularity="1sp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/rounded_rectangle_shape"
        android:backgroundTint="@color/black_A30"
        android:text="@string/hide_currencies"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.08"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_currenciesContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <SearchView
            android:id="@+id/currencySearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rounded_rectangle_shape"
            android:queryHint="@string/search_currency" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="com.example.currencyexchange.fragments.CurrencyResultListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="4dp"
            android:background="@drawable/rounded_rectangle_shape"/>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>